--- a/ldms/man/Plugin_aries_mmr.man
+++ b/ldms/man/Plugin_aries_mmr.man
@@ -1,24 +1,39 @@
 .\" Manpage for Plugin_aries_mmr
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "01 Nov 2015" "v3" "LDMS Plugin for the aries_mmr sampler.
+.TH man 7 "10 Nov 2015" "v3" "LDMS Plugin for the aries_mmr sampler.
 
 .SH NAME
-Plugin_aries_mmr - man page for the aries_mmr sampler.
+Plugin_aries_mmr - man page for the aries_mmr sampler and variants.
 
 .SH SYNOPSIS
 Within ldmsctl
 .br
 ldmsctl> config name=aries_mmr [ <attr> = <value> ]
+ldmsctl> config name=aries_nic_mmr [ <attr> = <value> ]
+ldmsctl> config name=aries_rtr_mmr [ <attr> = <value> ]
 
 .SH DESCRIPTION
 With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The aries_mmr sampler provides aries network counter information. The particular counters to be read are
+The aries_XXX_mmr sampler variants. provides aries network counter information. The particular counters to be read are
 specified by configuration files. No functional combinations of the counters are supported (.i.e., does not sum
 or scale values).
 
 .PP
-The aries_mmr sampler depends on Cray's libgpcd, built with aries options. This library is currently
+The aries_XXX_mmr samplers depend on Cray's libgpcd, built with aries options. This library is currently
 unreleased and you cannot build this sampler, if you do not have the libraries and headers.
+
+.PP
+The difference between the variants is that aries_nic_mmr will skip any counters in the inputfile
+that do NOT begin with AR_NIC_; aries_rtr_mmr does the opposite; and aries_mmr does NO name filtering.
+You can run all 3 simultaneously.
+
+.PP
+Different types of metrics are added to separate gpcd_contexts. The order of the metrics in the output
+is the contexts in a particular order, with the metrics in each context as they are specified in the file.
+
+.PP
+For the config file, all counter names must be fully spelled out (i.e., does not resolve the shorthand
+given in the documentation for the counters).
 
 If you have the code to build the library, be sure to build with
 .B CFLAGS=-fPIC
@@ -31,14 +46,14 @@ To build the aries_mmr sampler, build with the following flags:
 .SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<iname>  [(raw|rc|nic|ptile)file=<file> schema=<sname>]
+name=<plugin_name> producer=<pname> instance=<iname> file=<file> [component_id=<compid> schema=<sname>]
 .br
 ldmsctl configuration line
 .RS
 .TP
 name=<plugin_name>
 .br
-This MUST be aries_mmr
+This MUST be aries_mmr, aries_nic_mmr, or aries_rtr_mmr.
 .TP
 producer=<pname>
 .br
@@ -52,26 +67,14 @@ schema=<sname>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a different schema. This will default to cray_aries_r or cray_gemini_r as appropriate, if unspecified.
 .TP
-rawfile=<file>
+component_id=<compid>
 .br
-Configuration file of aries performance counter names that will be added in exactly as they are specified (hence raw).
-This file is optional, but at least one of file must be specified.
+Optional unique number component identifier. Defaults to zero.
 .TP
-rcfile=<file>
+file=<file>
 .br
-Configuration file of aries performance counter names that have row column dependencies. Use the base part of the name
-and the prefix (AR_RTR_r_c) for all rows and columns will be added.
-This file is optional, but at least one of file must be specified.
-.TP
-nicfile=<file>
-.br
-Configuration file of aries performance counter names for nics. Name will have 'n' which will be replaced for all nic vals (0-3).
-This file is optional, but at least one of file must be specified.
-.TP
-ptilefile=<file>
-.br
-Configuration file of aries performance counter names for ptile. Name will have 'n' which will be replaced for all ptile vals (0-7).
-This file is optional, but at least one of file must be specified.
+Configuration file of aries performance counter names that will be added in exactly as they are specified.
+At least one file must be specified.
 .RE
 
 .SH NOTES
@@ -83,7 +86,7 @@ At the moment, no functions of the data (either in the sampler or in a store) ar
 .IP \[bu]
 Counters whose names do not resolve are left out.
 .IP \[bu]
-This sampler may change at any time.
+These samplers may change at any time.
 .IP \[bu]
 .PP
 
@@ -91,8 +94,8 @@ This sampler may change at any time.
 No known bugs.
 
 .SH EXAMPLES
-.PP Config files
-> cat rawmetrics.txt
+.PP Config file
+> cat metrics.txt
 .br
 #RAW METRICS
 .br
@@ -104,35 +107,13 @@ AR_NIC_RSPMON_NPT_EVENT_CNTR_NL_FLITS
 .br
 # this is a test
 .br
-
-> cat rcmetrics.txt
+AR_RTR_1_2_INQ_PRF_INCOMING_FLIT_VC0
 .br
-#RC METRICS -- strip the headers, they will be added...
-.br
-INQ_PRF_INCOMING_FLIT_VC0
-.br
-INQ_PRF_INCOMING_FLIT_VC1
-.br
-
-> cat nicmetrics.txt
-.br
-#NIC METRICS -- n will be replaced for all n
-.br
-AR_NL_PRF_REQ_PTILES_TO_NIC_n_FLITS
-
-> cat ptilemetrics.txt
-.br
-#PTILE METRICS -- p will be replaced for all p
-.br
-AR_NL_PRF_PTILE_p_REQ_IN_NW_FLITS
-.br
-AR_NL_PRF_PTILE_p_REQ_IN_NW_PKTS
-
 
 .PP Starting
 ldmsctl> load name=aries_mmr
 .br
-ldmsctl>  config name=aries_mmr producer=localhost2 instance=localhost2/aries_mmr schema=aries_mmr rcfile=/home/XXX/rcmetrics.txt rawfile=/home/XXX/rawmetrics.txt
+ldmsctl>  config name=aries_mmr producer=localhost2 instance=localhost2/aries_mmr schema=aries_mmr file=/home/XXX/metrics.txt
 .br
 ldmsctl> start name=aries_mmr interval=1000000
 .br
@@ -140,29 +121,7 @@ ldmsctl> start name=aries_mmr interval=1000000
 .PP Output
 > ldms_ls
 localhost2/aries_mmr: consistent, last update: Wed Oct 28 08:48:36 2015 [153343us]
- u64                0 AR_RTR_4_7_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_6_INQ_PRF_INCOMING_FLIT_VC1
- u64        699923330 AR_RTR_4_5_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_4_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_3_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_2_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_1_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_4_0_INQ_PRF_INCOMING_FLIT_VC1
- u64       2402304628 AR_RTR_3_7_INQ_PRF_INCOMING_FLIT_VC1
- u64        636514773 AR_RTR_3_6_INQ_PRF_INCOMING_FLIT_VC1
- u64       7632505254 AR_RTR_3_5_INQ_PRF_INCOMING_FLIT_VC1
- u64       7009139188 AR_RTR_3_4_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_3_3_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_3_2_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_3_1_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_3_0_INQ_PRF_INCOMING_FLIT_VC1
- u64       4411960959 AR_RTR_2_7_INQ_PRF_INCOMING_FLIT_VC1
- u64                0 AR_RTR_2_6_INQ_PRF_INCOMING_FLIT_VC1
- u64       8961334661 AR_RTR_2_5_INQ_PRF_INCOMING_FLIT_VC1
- ....
- u64                0 AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC0
- u64                0 AR_RTR_0_1_INQ_PRF_INCOMING_FLIT_VC0
- u64                0 AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC0
+ u64                0 AR_RTR_1_2_INQ_PRF_INCOMING_FLIT_VC0
  u64       5968204876 AR_NIC_RSPMON_NPT_EVENT_CNTR_NL_FLITS
  u64       4182142522 AR_NIC_NETMON_ORB_EVENT_CNTR_REQ_FLITS
 
