--- a/ldms/man/Plugin_procnfs.man
+++ b/ldms/man/Plugin_procnfs.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procnfs
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "23 Oct 2015" "v3" "LDMS Plugin procnfs man page"
+.TH man 7 "01 Dec 2015" "v3" "LDMS Plugin procnfs man page"
 
 .SH NAME
 Plugin_procnfs - man page for the LDMS procnfs plugin
@@ -18,7 +18,7 @@ The procnfs plugin provides info from /proc/net/rpc/nfs
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [with_jobid=<bool>]
+name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
 .br
 ldmsctl configuration line
 .RS
@@ -39,6 +39,10 @@ schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `meminfo`.
+.TP
+component_id=<compid>
+.br
+Optional component identifier. Defaults to zero.
 .TP
 with_jobid=<bool>
 .br
