cross references in man pages

--- a/ldms/man/Plugin_aries_mmr.man
+++ b/ldms/man/Plugin_aries_mmr.man
@@ -133,4 +133,4 @@ localhost2/aries_mmr: consistent, last update: Wed Oct 28 08:48:36 2015 [153343u
 
 
 .SH SEE ALSO
-ldms(7), Plugin_cray_sampler_variants(7)
+ldmsd(8), Plugin_cray_sampler_variants(7), ldms_quickstart(7)
