--- a/ldms/man/Plugin_cray_system_sampler_variants.man
+++ b/ldms/man/Plugin_cray_system_sampler_variants.man
@@ -683,4 +683,4 @@ U64 1626210          ipogif0_tx_bytes
 
 
 .SH SEE ALSO
-ldms(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7)
+ldmsd(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7), ldms_quickstart(7)
