--- a/ldms/man/Plugin_store_csv.man
+++ b/ldms/man/Plugin_store_csv.man
@@ -216,4 +216,4 @@ ldmsd_controller> strgp_add name=csv_mem_policy plugin=store_csv container=loada
 .fi
 
 .SH SEE ALSO
-ldms(7), Plugin_store_derived_csv(7)
+ldmsd(8), Plugin_store_derived_csv(7), ldms_quickstart(7)
