--- a/ldms/man/Plugin_aries_mmr.man
+++ b/ldms/man/Plugin_aries_mmr.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_aries_mmr
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "10 Nov 2015" "v3" "LDMS Plugin for the aries_mmr sampler.
+.TH man 7 "03 Feb 2016" "v3" "LDMS Plugin for the aries_mmr sampler.
 
 .SH NAME
 Plugin_aries_mmr - man page for the aries_mmr sampler and variants.
@@ -9,7 +9,9 @@ Plugin_aries_mmr - man page for the aries_mmr sampler and variants.
 Within ldmsctl
 .br
 ldmsctl> config name=aries_mmr [ <attr> = <value> ]
+.br
 ldmsctl> config name=aries_nic_mmr [ <attr> = <value> ]
+.br
 ldmsctl> config name=aries_rtr_mmr [ <attr> = <value> ]
 
 .SH DESCRIPTION
@@ -45,7 +47,7 @@ To build the aries_mmr sampler, build with the following flags:
 .SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<iname> file=<file> [component_id=<compid> schema=<sname>]
+name=<plugin_name> producer=<pname> instance=<iname> file=<file> [component_id=<compid> aries_rtr_id=<rtrid> schema=<sname>]
 .br
 ldmsctl configuration line
 .RS
@@ -69,6 +71,10 @@ Optional schema name. It is intended that the same sampler on different nodes wi
 component_id=<compid>
 .br
 Optional component identifier. Defaults to zero.
+.TP
+aries_rtr_id=<rtrid>
+.br
+Optional aries router identifier. Defaults to 0 length string.
 .TP
 file=<file>
 .br
