--- a/baler/examples/CrayXC40/README
+++ b/baler/examples/CrayXC40/README
@@ -12,17 +12,17 @@ This is an example for a 1 cab CrayXC40
 
 1) To run an instance of Baler that will ingest rsyslog data:
    a) NOTE: you will need to check paths and ports in the files below
-   b) source <path_to_examples>baler_env.sh
-   c) <path_to_examples/run_baler.sh - this uses baler.cfg. NOTE it has an rsyslog port
+   b) source <path_to_examples>/CrayXC40/baler_env.sh
+   c) <path_to_examples>/CrayXC40/run_baler.sh - this uses baler.cfg. NOTE it has an rsyslog port
 
 2) Some useful commands:
 
-   BEFORE ANYTHING ELSE: source <path_to_examples>/baler_env.sh
+   BEFORE ANYTHING ELSE: source <path_to_examples>/CrayXC40/baler_env.sh
 
    a) Query for the patterns (verbose):
 
 
-       > bquery --store-path=<path_to_store>/store -t PTN -v
+       > bquery --store-path=<path_to_baler_store_dir>/store -t PTN -v
          -------- -------------------- -------------------------------- -------------------------------- ----------
           ptn_id   count                first-seen                       last-seen                        pattern
          -------- -------------------- -------------------------------- -------------------------------- ----------
@@ -45,7 +45,7 @@ This is an example for a 1 cab CrayXC40
 
    b) Query for the messages:
 
-   > bquery --store-path=<path_to_store>/store -t MSG
+   > bquery --store-path=<path_to_baler_store_dir>/store -t MSG
      2016-02-17T15:23:04.000000-07:00 c0-0c0s0n1 apevent[16232] EVENT[sync][0]: resid 857344 uid 27125 batchID '14829.mutrino-moab' nids 1 [45]
      2016-02-17T15:23:04.000000-07:00 c0-0c0s0n1 erdh[7692] 2016-02-17 15:23:04|ec_alps_app_status|src:::c0-0c0s0n1|pri:0x1|seqnum:0xf2c847f6|svc:::s0
      2016-02-17T15:23:04.000000-07:00 c0-0c2s2n1 apsched[11582] read request >apevent<
@@ -61,36 +61,36 @@ This is an example for a 1 cab CrayXC40
 
     c-1) Create a new partition, make it active, and query:
 
-    > sos_part_query <path_to_store>/store/msg_store/msg -v
+    > sos_part_query <path_to_baler_store_dir>/store/msg_store/msg -v
       Partition Name       RefCount Status           Size     Modified         Accessed         Path
       -------------------- -------- ---------------- -------- ---------------- ---------------- ----------------
-      1455667200                  3 PRIMARY                1M 2016/02/17 15:43 2016/02/17 15:24 <path_to_store>/store/msg_store/msg
+      1455667200                  3 PRIMARY                1M 2016/02/17 15:43 2016/02/17 15:24 <path_to_baler_store_dir>/store/msg_store/msg
 
-    > sos_part_create -C <path_to_store>/store/msg_store/msg baler_1
-    > sos_part_query <path_to_store>/store/msg_store/msg -v
+    > sos_part_create -C <path_to_baler_store_dir>/store/msg_store/msg baler_1
+    > sos_part_query <path_to_baler_store_dir>/store/msg_store/msg -v
       Partition Name       RefCount Status           Size     Modified         Accessed         Path
       -------------------- -------- ---------------- -------- ---------------- ---------------- ----------------
-      1455667200                  3 PRIMARY                1M 2016/02/17 15:43 2016/02/17 15:24 <path_to_store>/store/msg_store/msg
-      baler_1                     2 OFFLINE                                                     <path_to_store>/store/msg_store/msg
+      1455667200                  3 PRIMARY                1M 2016/02/17 15:43 2016/02/17 15:24 <path_to_baler_store_dir>/store/msg_store/msg
+      baler_1                     2 OFFLINE                                                     <path_to_baler_store_dir>/store/msg_store/msg
 
-    > sos_part_modify -C <path_to_store>/store/msg_store/msg -s active baler_1
+    > sos_part_modify -C <path_to_baler_store_dir>/store/msg_store/msg -s active baler_1
 
-    > sos_part_query <path_to_store>/store/msg_store/msg -v
+    > sos_part_query <path_to_baler_store_dir>/store/msg_store/msg -v
       Partition Name       RefCount Status           Size     Modified         Accessed         Path
       -------------------- -------- ---------------- -------- ---------------- ---------------- ----------------
-      1455667200                  4 PRIMARY                1M 2016/02/17 15:46 2016/02/17 15:43 <path_to_store>/store/msg_store/msg
-      baler_1                     3 ACTIVE                65K 2016/02/17 15:43 2016/02/17 15:45 <path_to_store>/store/msg_store/msg
+      1455667200                  4 PRIMARY                1M 2016/02/17 15:46 2016/02/17 15:43 <path_to_baler_store_dir>/store/msg_store/msg
+      baler_1                     3 ACTIVE                65K 2016/02/17 15:43 2016/02/17 15:45 <path_to_baler_store_dir>/store/msg_store/msg
 
       SHOW that patterns and messages still start at the initial time (15:23)
 
-   >  bquery --store-path=<path_to_store>/store -t MSG | more
+   >  bquery --store-path=<path_to_baler_store_dir>/store -t MSG | more
       2016-02-17T15:23:04.000000-07:00 c0-0c0s0n1 apevent[16232] EVENT[sync][0]: resid 857344 uid 27125 batchID '14829.mutrino-moab' nids 1 [45]
       2016-02-17T15:23:04.000000-07:00 c0-0c0s0n1 erdh[7692] 2016-02-17 15:23:04|ec_alps_app_status|src:::c0-0c0s0n1|pri:0x1|seqnum:0xf2c847f6|svc:::s0
       2016-02-17T15:23:04.000000-07:00 c0-0c2s2n1 apsched[11582] read request >apevent<
       2016-02-17T15:23:04.000000-07:00 c0-0c2s2n1 apsched[11582] ------------------------------------------ apevent msg
       2016-02-17T15:23:04.000000-07:00 c0-0c2s2n1 apsched[11582] Apid 857344 (resId 857344) cmdName '' batchID '14829.mutrino-moab' uid 27125 numNids 1 old/newSiz 8/76
 
-   >  bquery --store-path=<path_to_store>/store -t MSG -P 128
+   >  bquery --store-path=<path_to_baler_store_dir>/store -t MSG -P 128
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 19:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
@@ -100,19 +100,19 @@ This is an example for a 1 cab CrayXC40
 
     c-2) Make the new partition primary and see that the patterns and the message start at the expected time
 
-    > sos_part_modify -C <path_to_store>/store/msg_store/msg -s primary baler_1
-    > sos_part_query <path_to_store>/store/msg_store/msg -v
+    > sos_part_modify -C <path_to_baler_store_dir>/store/msg_store/msg -s primary baler_1
+    > sos_part_query <path_to_baler_store_dir>/store/msg_store/msg -v
       Partition Name       RefCount Status           Size     Modified         Accessed         Path
       -------------------- -------- ---------------- -------- ---------------- ---------------- ----------------
-      1455667200                  5 ACTIVE                 1M 2016/02/17 15:47 2016/02/17 15:47 <path_to_store>/store/msg_store/msg
-      baler_1                     5 PRIMARY               65K 2016/02/17 15:48 2016/02/17 15:45 <path_to_store>/store/msg_store/msg
+      1455667200                  5 ACTIVE                 1M 2016/02/17 15:47 2016/02/17 15:47 <path_to_baler_store_dir>/store/msg_store/msg
+      baler_1                     5 PRIMARY               65K 2016/02/17 15:48 2016/02/17 15:45 <path_to_baler_store_dir>/store/msg_store/msg
 
-    > bquery --store-path=<path_to_store>/store -t MSG -P 128
+    > bquery --store-path=<path_to_baler_store_dir>/store -t MSG -P 128
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 19:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:23:04.000000-07:00 c0-0c0s8 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
 
-    >  bquery --store-path=<path_to_store>/store -t PTN -v
+    >  bquery --store-path=<path_to_baler_store_dir>/store -t PTN -v
        -------- -------------------- -------------------------------- -------------------------------- ----------
        ptn_id   count                first-seen                       last-seen                        pattern
        -------- -------------------- -------------------------------- -------------------------------- ----------
@@ -126,14 +126,14 @@ This is an example for a 1 cab CrayXC40
    c-3)  NOW make the original partition offline and see that the patterns still start at the initial time,
          but the messages are only since the primary change
 
-    >  sos_part_modify -C <path_to_store>/store/msg_store/msg -s offline 1455667200
-    >  sos_part_query <path_to_store>/store/msg_store/msg -v
+    >  sos_part_modify -C <path_to_baler_store_dir>/store/msg_store/msg -s offline 1455667200
+    >  sos_part_query <path_to_baler_store_dir>/store/msg_store/msg -v
        Partition Name       RefCount Status           Size     Modified         Accessed         Path
        -------------------- -------- ---------------- -------- ---------------- ---------------- ----------------
-       1455667200                  5 OFFLINE                                                     <path_to_store>/store/msg_store/msg
-       baler_1                     5 PRIMARY               65K 2016/02/17 15:49 2016/02/17 15:48 <path_to_store>/store/msg_store/msg
+       1455667200                  5 OFFLINE                                                     <path_to_baler_store_dir>/store/msg_store/msg
+       baler_1                     5 PRIMARY               65K 2016/02/17 15:49 2016/02/17 15:48 <path_to_baler_store_dir>/store/msg_store/msg
 
-    > bquery --store-path=<path_to_store>/store -t PTN -v
+    > bquery --store-path=<path_to_baler_store_dir>/store -t PTN -v
       -------- -------------------- -------------------------------- -------------------------------- ----------
        ptn_id   count                first-seen                       last-seen                        pattern
       -------- -------------------- -------------------------------- -------------------------------- ----------
@@ -143,7 +143,7 @@ This is an example for a 1 cab CrayXC40
            131                    6 2016-02-17T15:23:04.000000-07:00 2016-02-17T15:48:04.000000-07:00 *[*] * * (* *) * '' * '*.*-moab' * * * * old/* */*
            132                    6 2016-02-17T15:23:04.000000-07:00 2016-02-17T15:48:04.000000-07:00 *[*] type * (sync) * * * *
 
-    > bquery --store-path=<path_to_store>/store -t MSG -P 128
+    > bquery --store-path=<path_to_baler_store_dir>/store -t MSG -P 128
       2016-02-17T15:50:40.000000-07:00 c0-0c2s9 kernel: micro_i2c_xfer_multi: 19:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:50:40.000000-07:00 c0-0c2s9 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
       2016-02-17T15:50:40.000000-07:00 c0-0c2s9 kernel: micro_i2c_xfer_multi: 17:0x78 bad i2c rc value, i2c rc=0x5
