--- a/ldms/man/Plugin_procnetdev.man
+++ b/ldms/man/Plugin_procnetdev.man
@@ -18,7 +18,7 @@ The procnetdev plugin provides network info from /proc/net/dev.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> ifaces=<ifs> [component_id=<compid> schema=<sname>]
+name=<plugin_name> producer=<pname> instance=<set_name> ifaces=<ifs> [component_id=<compid> schema=<sname> with_jobid=<0/1>]
 .brldmsctl configuration line
 .RS
 .TP
@@ -46,10 +46,14 @@ different schema. If not specified, will default to `procnetdev`.
 component_id=<compid>
 .br
 Optional component identifier. Defaults to zero.
+.TP
+with_jobid=<bool>
+.br
+Option to collect jobid with set or 0 if not.
 .RE
 
 .SH BUGS
-No known bugs.
+Interfaces list is limited to 5.
 
 .SH EXAMPLES
 .PP
